fixes products filter heght on mobile

--- a/src/modules/productsPageFilter/components/FilterModal/FilterModal.module.scss
+++ b/src/modules/productsPageFilter/components/FilterModal/FilterModal.module.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
 
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
@@ -28,7 +28,7 @@
   width: 375px;
   // height: 100%;
   height: calc(100dvh - env(safe-area-inset-bottom) - 24px * 2);
-  max-height: 812px;
+  // max-height: 812px;
   flex-direction: column;
   align-items: flex-start;
   background-color: $light-color;
@@ -37,7 +37,7 @@
   @include media(tablet) {
     width: 768px;
     // height: 100vh;
-    max-height: 940px;
+    // max-height: 940px;
     align-items: flex-start;
     flex-shrink: 0;
   }
